--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -35,5 +35,13 @@
 	    </div>
 
 	  </div>
+	  <script src="/static/jquery.js"></script>
+	  <script src="/static/list.js"></script>
+
+	<script>
+	  $(document).ready(function () {
+	    window.Superlists.initialize();
+	  });
+	</script>
 	</body>
 </html>
