--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -10,6 +10,16 @@
 	</head>
 	<body>
 	  <div class="container">
+	    <nav class="navbar navbar-default" role="navigation">
+	      <div class="container-ﬂuid">
+		<a class="navbar-brand" href="/">Superlists</a>
+		<form class="navbar-form navbar-right" method="POST" action="#">
+		  <span>Enter email to log in:</span>
+		  <input class="form-control" name="email" type="text" />
+		  {% csrf_token %}
+		</form>
+	      </div>
+	    </nav>
 	    <div class="row">
 	      <div class="col-md-6 col-md-offset-3 jumbotron">
 		<div class="text-center">
@@ -20,6 +30,7 @@
 			{% if form.errors %}
 			  <div class="form-group has-error">
 			    <span class="help-block">{{ form.text.errors }}</span>
+			    <input class="form-control" name="email" type="text" />
 			  </div>
 			{% endif %}
 		</form>
