--- a/lists/templates/my_lists.html
+++ b/lists/templates/my_lists.html
@@ -5,7 +5,7 @@
 {% block list_form %}{% endblock %}
 
 {% block extra_content %}
-  <h2>{{ owner.email }}'s lists</h2>
+  <h4>{{ owner.email }}'s lists</h4>
   <ul>
   {% for list in owner.list_set.all %}
   <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
@@ -13,3 +13,11 @@
   </ul>
 {% endblock %}
 
+{% block others_lists %}
+  <h4>Others' shared lists</h4>
+  <ul>
+    {% for list in owner.shared.all %}
+    <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
+    {% endfor %}
+  </ul>
+{% endblock %}
