--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -84,6 +84,11 @@
 	    {% if user.is_authenticated %}
 	    <div class="row">
 	      <div class="col-md-6 col-md-offset-3">
+		<h4>Общий доступ</h4>
+	      </div>
+	    </div>
+	    <div class="row">
+	      <div class="col-md-6 col-md-offset-3">
 		{% block others_lists %}
 		{% endblock %}
 		{% block shared_with %}
